# henk

./: Classification.hs  HenkAS.hs  HenkInt.hs  HenkPP.hs  HenkParser.hs  HenkTC.hs  HenkTI.hs  Main.hs  ParseError.hs  ParseExpr.hs  ParseToken.hs  Parser.hs  ParserTests.hs  Pretty.lhs  README.md  StdTokenDef.hs  TermSupport.hs  TokenDef.hs  TypeSystems.hs  henk.cabal  prelude.henk  prog.henk
.github/workflows/: haskell.yml
src/: Classification.hs  HenkPP.hs  HenkTI.hs  Main.hs  ParseError.hs  ParseExpr.hs  Parser.hs  TermSupport.hs  TokenDef.hs  TypeSystems.hs
test/: ParserTests.hs
